Depend on Set::Object

--- a/dist.ini
+++ b/dist.ini
@@ -12,7 +12,7 @@ Net::Twitter             = 1.17
 Moose                    = 0.54
 MooseX::AttributeHelpers = 0.12
 Module::Pluggable        = 3.8
-
+Set::Object              = 1.00
 Test::More               = 0.86
 Test::Exception          = 0.27
 
