--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,8 @@
 name    = NetHack-Item
 version = 0.06
 author  = Shawn M Moore <sartak@bestpractical.com>
+author  = Jesse Luehrs <doy@tozt.net>
+author  = Sean Kelly <cpan@katron.org>
 license = Perl_5
 copyright_holder = Shawn M Moore
 
