--- a/dist.ini
+++ b/dist.ini
@@ -3,6 +3,7 @@ version = 0.07
 author  = Shawn M Moore <sartak@bestpractical.com>
 author  = Jesse Luehrs <doy@tozt.net>
 author  = Sean Kelly <cpan@katron.org>
+author  = Stefan O'Rear <stefanor@cox.net>
 license = Perl_5
 copyright_holder = Shawn M Moore
 
