--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ copyright_holder = Shawn M Moore
 [@Classic]
 
 [Prereq]
+NetHack::Monster::Spoiler = 0.01
 Moose                    = 0.54
 MooseX::AttributeHelpers = 0.12
 Module::Pluggable        = 3.8
