--- a/dist.ini
+++ b/dist.ini
@@ -10,11 +10,12 @@ copyright_holder = Shawn M Moore
 [@Classic]
 
 [Prereq]
-NetHack::Monster::Spoiler = 0.02
-Moose                     = 0.54
-MooseX::AttributeHelpers  = 0.12
-Module::Pluggable         = 3.8
-Set::Object               = 1.00
-Test::More                = 0.86
-Test::Exception           = 0.27
+NetHack::Monster::Spoiler   = 0.02
+Moose                       = 0.54
+MooseX::AttributeHelpers    = 0.12
+MooseX::Role::Parameterized = 0.05
+Module::Pluggable           = 3.8
+Set::Object                 = 1.00
+Test::More                  = 0.86
+Test::Exception             = 0.27
 
