fix a broken prereq

--- a/dist.ini
+++ b/dist.ini
@@ -17,4 +17,4 @@ MooseX::Role::Parameterized = 0.05
 Module::Pluggable           = 3.8
 Set::Object                 = 1.00
 Test::More                  = 0.86
-Test::Exception             = 0.2k
+Test::Exception             = 0.27
