appease future dzil deprecation

--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,7 @@ abstract = parse and interact with a NetHack item
 
 [@Classic]
 
-[Prereq]
+[Prereqs]
 NetHack::Monster::Spoiler   = 0.02
 Moose                       = 0.90
 MooseX::Role::Parameterized = 0.05
