--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = NetHack-Item
-version = 0.15
+version = 0.16
 author  = Shawn M Moore <sartak@bestpractical.com>
 author  = Jesse Luehrs <doy at tozt dot net>
 author  = Sean Kelly <cpan@katron.org>
@@ -9,6 +9,7 @@ copyright_holder = Shawn M Moore
 abstract = parse and interact with a NetHack item
 
 [@Classic]
+[TestRelease]
 
 [Prereqs]
 NetHack::Monster::Spoiler   = 0.02
