--- a/dist.ini
+++ b/dist.ini
@@ -8,7 +8,10 @@ license = Perl_5
 copyright_holder = Shawn M Moore
 abstract = parse and interact with a NetHack item
 
-[@Classic]
+[@Filter]
+-bundle = @Classic
+-remove = PodCoverageTests
+
 [TestRelease]
 
 [Prereqs]
