--- a/dist.ini
+++ b/dist.ini
@@ -21,4 +21,4 @@ MooseX::Role::Parameterized = 0.05
 Module::Pluggable           = 3.8
 Set::Object                 = 1.00
 Test::More                  = 0.88
-Test::Exception             = 0.27
+Test::Fatal                 = 0.007
